Consider all non-visible overflow as programatically scrollable for an AT

Accessibility must consider any kind of non-visible overflow as
programatically scrollable, so that the bounds of scrolled objects
in these containers correct for the scroll offsets.

This fixes a scrolling issue where screen readers were not scrolling
to the content they were reading, as they were getting incorrect bounds.
The content in question was using hidden overflow, which can be
programatically scrolled.

Bug: 646117
Change-Id: Ie083d7544b0e6dd2bdb7c5b8c1d41fc7c2377daf
Reviewed-on: https://chromium-review.googlesource.com/1178321
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585028}
Former-commit-id: 10fa518e77bdf7ff2df3a77cae0cf10fc6679348